<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="top"
        android:layout_margin="60dp"
        android:gravity="top|center"
        android:textSize="40dp"
        android:text="@string/app_name"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_margin="20dp"
        android:textSize="14dp"
        android:text="@string/activity_help_text"/>
    <Button
        android:id="@+id/bt_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_help_button"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:background="@drawable/selector_button_blue"/>


</RelativeLayout>