<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    >
    <TextView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/activity_splash_screen_logo"
        android:layout_weight="1"
        />
    <LinearLayout
        android:orientation="vertical"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_login_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:hint="@string/activity_login_email_hint"
                android:textSize="14sp"
                android:textColorHint="@color/cloudy_blue"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ti_login_email_input"
            >
            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/activity_login_password_hint"
                android:textSize="14sp"
                android:textColorHint="@color/cloudy_blue"
                android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:gravity="center_vertical"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_login_signIn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/ti_login_password_input"
            android:layout_marginTop="20dp"
            android:text="@string/activity_login_sign_in_btn"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/selector_button_blue"
            android:onClick="onSignInButtonClick"/>
    </LinearLayout>
</LinearLayout>
