<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white_gray">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginBottom="20dp">

     <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="-4dp"
        android:layout_marginTop="-6dp"
        card_view:contentPadding="-2dp">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/sky_blue"
                android:gravity="center"

                >
                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/drawable_companies_image_placeholder"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/warm_grey"
                />
        </LinearLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:background="@color/white"
         android:layout_marginLeft="-4dp"
         android:layout_marginRight="-4dp"
         android:layout_marginTop="-6dp"
         card_view:contentPadding="-2dp">
        <Button
            android:id="@+id/bt_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Services"
            android:textAlignment="gravity"
            android:gravity="left|center_vertical"
            android:padding="20dp"
            android:textSize="15sp"
            android:textColor="@color/warm_grey"
            android:background="@drawable/selector_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="9sp"
        android:text="@string/owner_contact_group"/>
    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:background="@color/white"
         android:layout_marginLeft="-4dp"
         android:layout_marginRight="-4dp"
         android:layout_marginTop="-6dp"
         card_view:contentPadding="-2dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/tv_tel_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/owner_tel_label"/>
                <TextView
                    android:id="@+id/tv_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_tel_label"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/sky_blue"
                    android:textSize="12sp"
                    />
                <TextView
                    android:id="@+id/tv_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_tel_label"
                    android:textSize="12sp"
                    android:text="@string/owner_address_label"/>
                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_address_label"
                    android:layout_alignParentRight="true"
                    android:textSize="12sp"
                    />
            </RelativeLayout>
            <ImageView
                android:id="@+id/iv_map"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/white"
               />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="9sp"
        android:text="@string/owner_gallery_group"/>
    <LinearLayout
        android:id="@+id/ll_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:background="@color/white">
    </LinearLayout>
 </LinearLayout>
</ScrollView>